fixed body copy size on mobile

--- a/_src/screen.scss
+++ b/_src/screen.scss
@@ -44,15 +44,19 @@ h3 {
 }
 
 .kicker {
-	font: 800 21px/140% $sans;
+	font: 800 18px/140% $sans;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	text-align: center;
 	margin-bottom: 30px;
+
+	@media (min-width: 600px) {
+		font-size: 21px
+	}//mq
 }
 
 .body-txt,bio-txt,dropcap {
-	font: 400 17px/170% $sans;
+	font: 400 16px/170% $sans;
 	margin-bottom: 25px;
 	color: $site-black;
 
